// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`originClaim v1 — gold snapshots (originClaim block only) gold:damage 1`] = `
{
  "candidates": [
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[albanian-dëm]",
      ],
      "form": "dëm",
      "id": "oc:albanian-dëm",
      "language": "Albanian",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Voice path alignment cannot be determined from available fields.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[latin-damnum]",
      ],
      "form": "damnum",
      "id": "oc:latin-damnum",
      "language": "Latin",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Voice path alignment cannot be determined from available fields.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
  ],
  "meta": {
    "engineVersion": "0.2.0-symbolic",
    "generatedAt": "<iso>",
    "inputs": {
      "alphabet": "auto",
      "brainCandidates": [
        {
          "form": "damnum",
          "functionTag": "UNKNOWN",
          "gloss": "damnum",
          "languageId": "wlt:canon.latin",
          "languageName": "Latin",
          "opsUsed": [],
          "roots": [
            "DAM-",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
        {
          "form": "dëm",
          "functionTag": "UNKNOWN",
          "gloss": "dëm",
          "languageId": "wlt:canon.albanian",
          "languageName": "Albanian",
          "opsUsed": [],
          "roots": [
            "DEM",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
      ],
      "mode": "strict",
      "word": "damage",
    },
  },
  "policy": "no_single_winner",
  "summary": {
    "confidence": "weak",
    "note": "Computed from candidate/deepRoot/voice-path/morphology signals. Passing: 2; strong: 0; medium: 0.",
  },
  "support": {
    "claimId": "oc:damage",
    "refs": [
      "ref:candidates[albanian-dëm]",
      "ref:candidates[latin-damnum]",
      "ref:heart.math7.primary",
    ],
  },
  "version": "v1",
}
`;

exports[`originClaim v1 — gold snapshots (originClaim block only) gold:father 1`] = `
{
  "candidates": [
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[albanian-atë]",
      ],
      "form": "atë",
      "id": "oc:albanian-atë",
      "language": "Albanian",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Voice path alignment cannot be determined from available fields.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[latin-pater]",
      ],
      "form": "pater",
      "id": "oc:latin-pater",
      "language": "Latin",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Voice path alignment cannot be determined from available fields.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
  ],
  "meta": {
    "engineVersion": "0.2.0-symbolic",
    "generatedAt": "<iso>",
    "inputs": {
      "alphabet": "auto",
      "brainCandidates": [
        {
          "form": "pater",
          "functionTag": "UNKNOWN",
          "gloss": "pater",
          "languageId": "wlt:canon.latin",
          "languageName": "Latin",
          "opsUsed": [],
          "roots": [
            "PAT-",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
        {
          "form": "atë",
          "functionTag": "UNKNOWN",
          "gloss": "atë",
          "languageId": "wlt:canon.albanian",
          "languageName": "Albanian",
          "opsUsed": [],
          "roots": [
            "ATE",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
      ],
      "mode": "strict",
      "word": "father",
    },
  },
  "policy": "no_single_winner",
  "summary": {
    "confidence": "weak",
    "note": "Computed from candidate/deepRoot/voice-path/morphology signals. Passing: 2; strong: 0; medium: 0.",
  },
  "support": {
    "claimId": "oc:father",
    "refs": [
      "ref:candidates[albanian-atë]",
      "ref:candidates[latin-pater]",
      "ref:heart.math7.primary",
    ],
  },
  "version": "v1",
}
`;

exports[`originClaim v1 — gold snapshots (originClaim block only) gold:hope 1`] = `
{
  "candidates": [],
  "meta": {
    "engineVersion": "0.2.0-symbolic",
    "generatedAt": "<iso>",
    "inputs": {
      "alphabet": "auto",
      "mode": "strict",
      "word": "hope",
    },
  },
  "policy": "no_single_winner",
  "summary": {
    "confidence": "insufficient_evidence",
    "note": "No passing candidates with sufficient computed support in the current result layers.",
  },
  "support": {
    "claimId": "oc:hope",
    "refs": [
      "ref:heart.math7.primary",
    ],
  },
  "version": "v1",
}
`;

exports[`originClaim v1 — gold snapshots (originClaim block only) gold:love 1`] = `
{
  "candidates": [
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[albanian-dashuri]",
      ],
      "form": "dashuri",
      "id": "oc:albanian-dashuri",
      "language": "Albanian",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Voice path alignment cannot be determined from available fields.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[latin-amor]",
      ],
      "form": "amor",
      "id": "oc:latin-amor",
      "language": "Latin",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Voice path alignment cannot be determined from available fields.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
  ],
  "meta": {
    "engineVersion": "0.2.0-symbolic",
    "generatedAt": "<iso>",
    "inputs": {
      "alphabet": "auto",
      "brainCandidates": [
        {
          "form": "amor",
          "functionTag": "UNKNOWN",
          "gloss": "amor",
          "languageId": "wlt:canon.latin",
          "languageName": "Latin",
          "opsUsed": [],
          "roots": [
            "AM-",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
        {
          "form": "dashuri",
          "functionTag": "UNKNOWN",
          "gloss": "dashuri",
          "languageId": "wlt:canon.albanian",
          "languageName": "Albanian",
          "opsUsed": [],
          "roots": [
            "DASH-",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
      ],
      "mode": "strict",
      "word": "love",
    },
  },
  "policy": "no_single_winner",
  "summary": {
    "confidence": "weak",
    "note": "Computed from candidate/deepRoot/voice-path/morphology signals. Passing: 2; strong: 0; medium: 0.",
  },
  "support": {
    "claimId": "oc:love",
    "refs": [
      "ref:candidates[albanian-dashuri]",
      "ref:candidates[latin-amor]",
      "ref:heart.math7.primary",
    ],
  },
  "version": "v1",
}
`;

exports[`originClaim v1 — gold snapshots (originClaim block only) gold:study 1`] = `
{
  "candidates": [
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[albanian-studim]",
      ],
      "form": "studim",
      "id": "oc:albanian-studim",
      "language": "Albanian",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Candidate voice path aligns with primary voice path.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
    {
      "confidence": "weak",
      "evidenceRefs": [
        "primaryPath.voicePath",
        "heart.math7.primary",
        "candidates[latin-studium]",
      ],
      "form": "studium",
      "id": "oc:latin-studium",
      "language": "Latin",
      "reasons": [
        "Candidate marked pass by engine candidate layer.",
        "Candidate voice path aligns with primary voice path.",
        "Candidate lacks detectable morphological structure.",
      ],
      "status": "pass",
    },
  ],
  "meta": {
    "engineVersion": "0.2.0-symbolic",
    "generatedAt": "<iso>",
    "inputs": {
      "alphabet": "auto",
      "brainCandidates": [
        {
          "form": "studium",
          "functionTag": "UNKNOWN",
          "gloss": "study, zeal, pursuit",
          "languageId": "wlt:canon.latin",
          "languageName": "Latin",
          "opsUsed": [],
          "roots": [
            "STUD-",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
        {
          "form": "studim",
          "functionTag": "UNKNOWN",
          "gloss": "studim",
          "languageId": "wlt:canon.albanian",
          "languageName": "Albanian",
          "opsUsed": [],
          "roots": [
            "STUD-",
          ],
          "source": {
            "kind": "SEED",
            "ref": "canonCandidates.ts",
            "version": "canon.v0.1",
          },
          "v": "brain.candidateRecord.v0.1",
        },
      ],
      "mode": "strict",
      "word": "study",
    },
  },
  "policy": "no_single_winner",
  "summary": {
    "confidence": "weak",
    "note": "Computed from candidate/deepRoot/voice-path/morphology signals. Passing: 2; strong: 0; medium: 0.",
  },
  "support": {
    "claimId": "oc:study",
    "refs": [
      "ref:candidates[albanian-studim]",
      "ref:candidates[latin-studium]",
      "ref:heart.math7.primary",
    ],
  },
  "version": "v1",
}
`;
